# Lafore_HW

./: CMakeLists.txt
2/: 2_1.cpp  2_10.cpp  2_11.cpp  2_12.cpp  2_2.cpp  2_3.cpp  2_4.cpp  2_5.cpp  2_6.cpp  2_7.cpp  2_8.cpp  2_9.cpp  CMakeLists.txt
3/: 3_1.cpp  3_10.cpp  3_11.cpp  3_12.cpp  3_2.cpp  3_3.cpp  3_4.cpp  3_5.cpp  3_6.cpp  3_7.cpp  3_8.cpp  3_9.cpp  CMakeLists.txt
4/: 4_1.cpp  4_10.cpp  4_11.cpp  4_12.cpp  4_2.cpp  4_4.cpp  4_5.cpp  4_6.cpp  4_8.cpp  4_9.cpp  CMakeLists.txt
5/: 5_1.cpp  5_10.cpp  5_11.cpp  5_12.cpp  5_2.cpp  5_3.cpp  5_4.cpp  5_5.cpp  5_6.cpp  5_7.cpp  5_8.cpp  5_9.cpp  CMakeLists.txt
6/: 6_1.cpp  6_10.cpp  6_11.cpp  6_12.cpp  6_2.cpp  6_3.cpp  6_4.cpp  6_5.cpp  6_6.cpp  6_7.cpp  6_8.cpp  6_9.cpp  CMakeLists.txt
7/: 7_1.cpp  7_10.cpp  7_11.cpp  7_2.cpp  7_3.cpp  7_4.cpp  7_6.cpp  7_7.cpp  7_8.cpp  7_9.cpp  CMakeLists.txt
8/: 8_1.cpp  8_11.cpp  8_2.cpp  8_3.cpp  8_4.cpp  8_5.cpp  8_6.cpp  8_7.cpp  8_9.cpp  CMakeLists.txt
9/: 9_1.cpp  9_2.cpp  9_3.cpp  CMakeLists.txt
listings/Exercises_oll/: ex10_1.cpp  ex10_2.cpp  ex10_3.cpp  ex10_4.cpp  ex11_1.cpp  ex11_2.cpp  ex11_3.cpp  ex12_1.cpp  ex12_2.cpp  ex12_3.cpp  ex14_1.cpp  ex14_2.cpp  ex14_3.cpp  ex15_1.cpp  ex15_2.cpp  ex15_3.cpp  ex15_4.cpp  ex2_2.cpp  ex2_3.cpp  ex3_1.cpp  ex3_2.cpp  ex3_3.cpp  ex3_4.cpp  ex4_1.cpp  ex4_2.cpp  ex4_3.cpp  ex5_1.cpp  ex5_2.cpp  ex5_3.cpp  ex5_4.cpp  ex6_1.cpp  ex6_2.cpp  ex6_3.cpp  ex7_1.cpp  ex7_2.cpp  ex7_3.cpp  ex8_1.cpp  ex8_2.cpp  ex8_3.cpp  ex8_4.cpp  (+4 more)
listings/ch_oll/: adelseif.cpp  adifelse.cpp  (+272 more)
trash/: CMakeLists.txt  cardarray.cpp
(+78 files in other folders)
