add_executable(2_1 2_1.cpp)
add_executable(2_2 2_2.cpp)
add_executable(2_3 2_3.cpp)
add_executable(2_4 2_4.cpp)
add_executable(2_5 2_5.cpp)
add_executable(2_6 2_6.cpp)
add_executable(2_7 2_7.cpp)
add_executable(2_8 2_8.cpp)
add_executable(2_9 2_9.cpp)
add_executable(2_10 2_10.cpp)
add_executable(2_11 2_11.cpp)
add_executable(2_12 2_12.cpp)