
add_executable(5_1 5_1.cpp)
add_executable(5_2 5_2.cpp)
add_executable(5_3 5_3.cpp)
add_executable(5_4 5_4.cpp)
add_executable(5_5 5_5.cpp)
add_executable(5_6 5_6.cpp)
add_executable(5_7 5_7.cpp)
add_executable(5_8 5_8.cpp)
add_executable(5_9 5_9.cpp)
add_executable(5_10 5_10.cpp)
add_executable(5_11 5_11.cpp)
add_executable(5_12 5_12.cpp)