
add_executable(7_1 7_1.cpp)
add_executable(7_3 7_3.cpp)
add_executable(7_2 7_2.cpp)
add_executable(7_4 7_4.cpp)
#add_executable(7_5 7_5.cpp)
add_executable(7_6 7_6.cpp)
add_executable(7_7 7_7.cpp)
add_executable(7_8 7_8.cpp)
add_executable(7_9 7_9.cpp)
#add_executable(7_10 7_10.cpp)
add_executable(7_11 7_11.cpp)